istio-installation-examples/nginx-sample-application/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment  # Replace with your desired deployment name
  labels:
    app: nginx
spec:
  replicas: 1  # Number of nginx pods to create
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest  # Replace with your desired nginx image
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  type: ClusterIP
  selector:
      app: nginx
  ports:
  - name: http
    port: 8081
    targetPort: 80
